deploy/jenkins/master/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "SAMEORIGIN";
      location ~* /script$ {
       return 403;
      }
      location ~* injectedEnvVars/$ {
       return 403;
      }
  name: opengauss-jenkins-ingress
spec:
  tls:
    - hosts:
        - jenkins.opengauss.org
      secretName: opengauss-jenkins-tls
  rules:
    - host: jenkins.opengauss.org
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /
